<resources>
    <string name="app_name">TeleFarm2</string>
    <string name="from_farm_to_home_splash">From Farm to Home</string>
    <string name="email_address">Email Address</string>
    <string name="pass">************</string>
    <string name="forget_password">Forget Password !</string>
    <string name="login">Login</string>
    <string name="login_bt">Login</string>
    <string name="click_here">Click Here</string>
    <string name="dont_have_an_account_click_here">Don\'t Have an Account ? Click Here</string>
    <string name="skip">SKIP</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="have_an_account_click_here">Have an account ? Click here</string>
    <string name="create_account">Create Account</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the terms and conditions</string>
    <string name="phone_number">Phone Number</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shoppingcart">Shopping Cart</string>
    <string name="sreach">Sreach</string>
    <string name="home">Home</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="favorite_fragment">Favorite Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="search_fragment">Search Fragment</string>
    <string name="shopping_cart_fragment">Shopping Cart Fragment</string>
    <string name="restore_password">Restore Password</string>
    <string name="send">Send</string>
    <string name="back">Back</string>
    <string name="fruits">Fruits</string>
    <string name="vegetables">Vegetables</string>
    <string name="leaves">Leaves</string>
    <string name="nuts">Nuts</string>
    <string name="name">Name</string>
    <string name="user_name">User Name</string>
    <string name="tele_farm_app">Tele Farm App</string>
    <string name="name_tele_farm_app">Name : Tele Farm App</string>
    <string name="mobil_0200000000">Mobil : 0200000000</string>
    <string name="email_info_telefarm_com">Email : info@telefarm.com</string>
    <string name="log_out">Log Out</string>
    <string name="setting">Setting</string>
    <string name="fruits_p">Fruits</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price :</string>
</resources>