<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ProfileFragment">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:padding="10dp"
       android:background="@drawable/rectangle_login"
       android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textSize="25sp"
        android:gravity="center"
        android:textColor="@color/colordarkgray" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:src="@drawable/profile" />

    <TextView
        android:id="@+id/user_name_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textSize="15sp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textColor="@color/colordarkgray" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_tele_farm_app"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:textSize="10sp"
        android:textColor="@color/colorgray"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mobil_0200000000"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:textSize="10sp"
        android:textColor="@color/colorgray"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_info_telefarm_com"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:textSize="10sp"
        android:textColor="@color/colorgray"/>


    <Button
        android:id="@+id/btn_log_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/bg_btn_green"
        android:text="@string/log_out"
        android:textAllCaps="false"
        android:textColor="@color/colorwhait"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:textSize="10sp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorgray"/>

   </LinearLayout>




</androidx.core.widget.NestedScrollView>