<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.Products.HomeFragment">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="All Products"
                android:textSize="15sp"
                android:textColor="@color/colorgray"
                android:layout_marginLeft="23dp" />

            <Button
                android:id="@+id/product_fruits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/fruits"
                android:text="@string/fruits"
                android:gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/colorgreen"
                android:textSize="15sp"/>
            <Button
                android:id="@+id/product_vegetables"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vegetables"
                android:textColor="@color/colorgreen"
                android:gravity="center"
                android:textSize="15sp"
                android:textAllCaps="false"
                android:background="@drawable/vegetables"/>
            <Button
                android:id="@+id/product_leaves"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/leaves"
                android:text="@string/leaves"
                android:gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/colorgreen"
                android:textSize="15sp"/>
            <Button
                android:id="@+id/product_nuts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/nuts"
                android:text="@string/nuts"
                android:gravity="center"
                android:textAllCaps="false"
                android:textColor="@color/colorgreen"
                android:textSize="15sp"/>

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

