<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rectangle2"
    tools:context=".ui.auth.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="131dp"
            android:paddingTop="10dp"
            android:paddingRight="131dp"
            app:srcCompat="@drawable/splash_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_login"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/colordarkgray"
                android:textSize="30sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="52dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="52dp"
                android:background="@drawable/bg_edit_text">

                <EditText
                    android:id="@+id/email_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableEnd="@drawable/ic_email"
                    android:hint="Email@example.com"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:autofillHints="Email"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="52dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="52dp"
                android:background="@drawable/bg_edit_text"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_password"
                    android:drawablePadding="30dp"
                    android:layout_marginTop="10dp"
                    android:hint="Password"
                    android:inputType="numberPassword"
                    android:padding="10dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/forget_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:gravity="center"
                android:text="@string/forget_password"
                android:textColor="@color/colorgray"
                android:textSize="10sp" />


            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="52dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="52dp"
                android:background="@drawable/bg_btn_green"
                android:text="@string/login_bt"
                android:textAllCaps="false"
                android:textColor="@color/colorwhait"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/CreateNewAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:gravity="center"
                android:text="@string/dont_have_an_account_click_here"
                android:textColor="@color/colorgray"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/Skip_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="280dp"
                android:layout_marginRight="40dp"
                android:drawableRight="@drawable/ic_arrowskip"
                android:text="@string/skip"
                android:padding="15dp"
                android:layout_gravity="right"
                android:textColor="@color/colordarkgray"
                android:textSize="15sp" />


        </LinearLayout>


    </LinearLayout>





</androidx.core.widget.NestedScrollView>