<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rectangle2"
    tools:context=".RestorePasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="131dp"
            android:paddingTop="10dp"
            android:paddingRight="131dp"
            app:srcCompat="@drawable/splash_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_login"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:text="@string/restore_password"
                android:textColor="@color/colordarkgray"
                android:textSize="30sp" />



            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="52dp"
                android:layout_marginTop="50dp"
                android:layout_marginRight="52dp"
                android:background="@drawable/bg_edit_text">

                <EditText
                    android:id="@+id/email_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:drawableEnd="@drawable/ic_email"
                    android:hint="email@example.com"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:autofillHints="Email"/>
            </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="52dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="52dp"
                android:background="@drawable/bg_btn_green"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textColor="@color/colorwhait"
                android:textSize="15sp" />



            <TextView
                android:id="@+id/back_restore_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginLeft="40dp"
                android:drawableLeft="@drawable/ic_arrowback"
                android:text="@string/back"
                android:padding="15dp"
                android:layout_gravity="left"
                android:textColor="@color/colordarkgray"
                android:textSize="15sp" />


        </LinearLayout>


    </LinearLayout>






</androidx.core.widget.NestedScrollView>