<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rectangle2"
    tools:context=".ui.auth.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle2"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginRight="131dp"
            android:layout_marginLeft="131dp"
            android:src="@drawable/splash_logo"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/rectangle_login">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:gravity="center"
                android:textSize="30sp"
                android:textColor="@color/colordarkgray"
                android:layout_marginTop="15dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="52dp"
                android:layout_marginRight="52dp"
                android:background="@drawable/bg_edit_text">

                <EditText
                    android:id="@+id/name_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_profil"
                    android:hint="Your Name"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="52dp"
                android:layout_marginRight="52dp"
                android:background="@drawable/bg_edit_text">

                <EditText
                    android:id="@+id/phone_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_phone"
                    android:hint="Phone Number"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="52dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="52dp"
                android:background="@drawable/bg_edit_text">

                <EditText
                    android:id="@+id/email_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableEnd="@drawable/ic_email"
                    android:hint="email@example.com"
                    android:inputType="textEmailAddress"
                    android:padding="10dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="52dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="52dp"
                android:background="@drawable/bg_edit_text"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/password_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_password"
                    android:drawablePadding="30dp"
                    android:hint="Password"
                    android:layout_marginTop="10dp"
                    android:inputType="numberPassword"
                    android:padding="10dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/terms_conditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/i_agree_to_the_terms_and_conditions"
                android:gravity="center"
                android:textSize="10sp"
                android:padding="20dp"/>

            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_btn_green"
                android:textAllCaps="false"
                android:textColor="@color/colorwhait"
                android:textSize="15sp"
                android:layout_marginLeft="52dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="52dp"
                android:text="@string/create_account"/>
            <TextView
                android:id="@+id/have_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/have_an_account_click_here"
                android:textSize="10sp"
                android:padding="20dp"/>

            <TextView
                android:id="@+id/back_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:layout_marginLeft="32dp"
                android:drawableStart="@drawable/ic_arrowback"
                android:gravity="left"
                android:textSize="15sp"
                android:padding="20dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>